# kenallclient

./: .gitignore  LICENSE  README.md  app.py  kenallclient.py  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  python.yml
kenallclient/: __init__.py  __main__.py  asyncclient.py  client.py  model.py
tests/: conftest.py  houjinbangou_search.json  postalcode_get.json  postalcode_search.json  test_client.py  test_model.py
