[metadata]
name = kenallclient
description = simple client for kenall.jp API service.
long_description = file:README.md
license = MIT

[options]
install_requires =
packages = find:

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-randomly
    pytest-mock
dev =
    black
    flake8
    mypy
release =
    nox
    build

[flake8]
max-line-length = 88