[metadata]
name = kenallclient
description = simple client for kenall.jp API service.
long_description = file:README.md
license = MIT

[options]
install_requires =
    dataclasses; python_version <= '3.6'
packages = find:

[options.packages.find]
exclude =
    tests

[options.extras_require]
async =
    aiohttp
testing =
    pytest
    pytest-cov
    pytest-randomly
    pytest-mock
dev =
    black
    flake8
    mypy
release =
    nox
    build

[flake8]
max-line-length = 88