[metadata]
name = kenallclient
description = simple client for kenall.jp API service.
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/aodag/kenallclient
author = Atsushi Odagiri
author_email = aodagx@gmail.com

[options]
install_requires =
    dataclasses; python_version <= '3.6'
packages = find:

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-randomly
    pytest-mock
dev =
    black
    flake8
    mypy
release =
    nox
    build

[flake8]
max-line-length = 88